--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,10 @@ body{
     font-size: 1.05rem;
 }
 
+.dark .ql-editor.ql-blank::before{
+  color:#fff;
+}
+
 .post-content p {
     margin-bottom: 0.5rem;
   }
